--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node --esm src/index.ts",
-    "test-client": "ts-node --esm src/test-client.ts",
+    "dev": "tsc && node dist/index.js",
+    "test-client": "tsc && node dist/test-client.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
